[gd_scene load_steps=3 format=3 uid="uid://dy3ht2gqsx14e"]

[ext_resource type="Script" path="res://modules/general_setting_panel/src/main/GSP_Page/GSP_Page.gd" id="1_35hmi"]
[ext_resource type="Texture2D" uid="uid://c04uqatjdfx44" path="res://icon.svg" id="2_armfj"]

[node name="GSP_Page" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_35hmi")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="PageElementsList" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="SideInfoSeparator" type="VSeparator" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="SideInfoContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="DemoPicture" type="TextureRect" parent="MarginContainer/HBoxContainer/SideInfoContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_armfj")
expand_mode = 1
stretch_mode = 5

[node name="SideInfoInsideSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/SideInfoContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="LabelInfo" type="RichTextLabel" parent="MarginContainer/HBoxContainer/SideInfoContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Text"
